--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:11
 ADD target/product-service-1.0.0-SNAPSHOT.jar product-service-1.0.0-SNAPSHOT.jar
-ENTRYPOINT [ "java","-jar","cart-service-1.0.0-SNAPSHOT.jar" ]
+ENTRYPOINT [ "java","-jar","product-service-1.0.0-SNAPSHOT.jar" ]
