--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: cart-service
     image: cart-service:1.0.0-SNAPSHOT
     restart: on-failure
+    ports:
+      - '7000:8080'
     depends_on:
       - docker-ecomm-mysql
 
@@ -12,6 +14,8 @@ services:
     container_name: checkout-serice
     image: checkout-service:1.0.0-SNAPSHOT
     restart: on-failure
+    ports:
+      - '7001:8080'
     depends_on:
       - docker-ecomm-mysql
 
@@ -19,6 +23,8 @@ services:
     container_name: order-service
     image: order-service:1.0.0-SNAPSHOT
     restart: on-failure
+    ports:
+      - '7002:8080'
     depends_on:
       - docker-ecomm-mysql
 
@@ -26,6 +32,8 @@ services:
     container_name: product-service
     image: product-service:1.0.0-SNAPSHOT
     restart: on-failure
+    ports:
+      - '7003:8080'
     depends_on:
       - docker-ecomm-mysql
 
