--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - docker-ecomm-mysql
 
   checkout-service:
-    container_name: checkout-serice
+    container_name: checkout-service
     image: checkout-service:1.0.0-SNAPSHOT
     restart: on-failure
     ports:
