Fetch product data from mysql container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,35 @@
 version: '3'
 
 services:
+  docker-mysql:
+    container_name: docker-mysql
+    image: mysql
+    restart: always
+    environment:
+      MYSQL_DATABASE: ecommdb
+      MYSQL_ROOT_PASSWORD: test1234
+      MYSQL_ROOT_HOST: '%'
+    volumes:
+      - ./sql:/docker-entrypoint-initdb.d
+    ports:
+      - '6666:3306'
+    healthcheck:
+      test: "/usr/bin/mysql --user=root password=test1234 --execute \"SHOW DATABASES \""
+      interval: 4s
+      timeout: 20s
+      retries: 5
+
+  product-service:
+    container_name: product-service
+    image: product-service:1.0.0-SNAPSHOT
+    restart: on-failure
+    ports:
+      - '7003:8080'
+    environment:
+      WAIT_HOSTS: mysql:3306
+    depends_on:
+      - docker-mysql
+
   cart-service:
     container_name: cart-service
     image: cart-service:1.0.0-SNAPSHOT
@@ -8,7 +37,7 @@ services:
     ports:
       - '7000:8080'
     depends_on:
-      - docker-ecomm-mysql
+      - docker-mysql
 
   checkout-service:
     container_name: checkout-service
@@ -17,7 +46,7 @@ services:
     ports:
       - '7001:8080'
     depends_on:
-      - docker-ecomm-mysql
+      - docker-mysql
 
   order-service:
     container_name: order-service
@@ -26,31 +55,7 @@ services:
     ports:
       - '7002:8080'
     depends_on:
-      - docker-ecomm-mysql
+      - docker-mysql
 
-  product-service:
-    container_name: product-service
-    image: product-service:1.0.0-SNAPSHOT
-    restart: on-failure
-    ports:
-      - '7003:8080'
-    depends_on:
-      - docker-ecomm-mysql
-
-  docker-ecomm-mysql:
-    container_name: docker-ecomm-mysql
-    image: mysql
-    restart: always
-    environment:
-      MYSQL_DATABASE: ecommdb
-      MYSQL_ROOT_PASSWORD: abc123
-      MYSQL_ROOT_HOST: '%'
-    volumes:
-      - ./sql:/docker-entrypoint-initdb.d
-    ports:
-      - 6668:3306
-    healthcheck:
-      test: "/usr/bin/mysql --user=root password=abc123 --execute \"SHOW DATABASES \""
-      interval: 1s
-      timeout: 20s
-      retries: 10
+networks:
+  ecommerce-net: null
