--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommdb
+spring.datasource.url=jdbc:mysql://docker-mysql:3306/ecommdb
 spring.datasource.username=root
-spring.datasource.password=abc123
+spring.datasource.password=test1234
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
